
2009-03-31  8:48 Ali aliov@xfce.org 
	 * : Bug:Brightness control wasn't getting disabled even if the user disabled it+fix dpms settings changed signal

2009-03-30 21:21 Ali aliov@xfce.org 
	 * : Added brightness popup+fix in XSyncAlarm error iin idle function+Fix reacration of popup window in the brightness plugin

2009-03-30 14:58 Ali aliov@xfce.org 
	 * : Fix some typos, Thanks to Per Kongstad

2009-03-30 11:20 Ali aliov@xfce.org 
	 * : Initializing gthread and dbus_g_thread+updates on TODO

2009-03-29 19:46 Ali aliov@xfce.org 
	 * : Prepare an alpha version of 0.8.0

2009-03-29 18:09 Ali aliov@xfce.org 
	 * : Inhibit plugin: automatically reconnect when the power manager restarts

2009-03-29 17:28 Ali aliov@xfce.org 
	 * : Disabling lid and sleep buttons if the power manager is in inhibit state

2009-03-29 16:24 Ali aliov@xfce.org 
	 * : Added option to reload panel brightness plugin

2009-03-29 16:01 Ali aliov@xfce.org 
	 * : Show an adapter icon if no battery device found and user select to always show icon

2009-03-29 15:39 Ali aliov@xfce.org 
	 * : Added xfpmshutdown to sync all the request

2009-03-29 12:22 Ali aliov@xfce.org 
	 * : Added power off button action

2009-03-29  0:43 Ali aliov@xfce.org 
	 * : Increase glib version dependency to 2.16

2009-03-28 17:19 Ali aliov@xfce.org 
	 * : Handle hald is not running or disconnected

2009-03-28 14:47 Ali aliov@xfce.org 
	 * : Move the context menu to xfpm-tray-icon

2009-03-27 15:37 Ali aliov@xfce.org 
	 * : Move the configuration loading to xfpm-xfconf

2009-03-25 13:03 Ali aliov@xfce.org 
	 * : Added xfpm-errors quark for the common errors

2009-03-24 16:34 Ali aliov@xfce.org 
	 * : Fix missing files in the POTFILES+rename the settings desktop file

2009-03-24 16:18 Ali aliov@xfce.org 
	 * : Generate random cookie on the inhibit+some optimizations

2009-03-24 16:09 Ali aliov@xfce.org 
	 * : Fix a crash in the brightness plugin when no device found

2009-03-23 21:54 Ali aliov@xfce.org 