@@ -13,14 +13,12 @@
 * : Block any other notification when OnCriticalPower notification is opened, in the way that
     we don't close it before the user close it or the Adapter is plugged in again.
 
-* : Support Suspend Hybrid!
+* : Support Suspend Hybrid! ( DeviceKit power will not support this ).
     
 * : Probably an exit option in the context menu?
 
 * : Use the session logout when we do shutdown, probably use the shutdown session interface anyway.
 
 * : Translations need to be updated.
-
-* : Man pages for xfce4-power-manager and its settings.
 
 * : Updating the documentations.
