@@ -1,0 +1,51 @@
+.TH XFCE4-POWER-MANAGER 1 "Version 0.8.0" "31 March 2009"
+
+.SH NAME
+xfce4-power-manager \- The Xfce 4 Power manager
+
+.SH SYNOPSIS
+.B xfce4-power-manager
+.I [options]
+.br
+
+.SH DESCRIPTION
+\fBxfce4-power-manager\fP manages the power sources on the computer and the devices that can be controlled
+to reduce their power consumption such as LCD brightness level, monitor sleep, CPU frequency scaling. In addition
+\fBxfce4-power-manager\fP provides a set of freedesktop compliant DBus interfaces to inform other applications 
+about current power level so they can adjust their power consumption, also it provides the inhibit interface which allow to 
+inhibit automatic sleep of the power manager, as an example of an application that should use this interface is an
+update manager.
+You can run \fBxfce4-power-manager\fP from the command line without specifying any extra argument.
+
+.SH OPTIONS
+.TP
+.B \--no-daemon
+Starts the power manager in non-daemon mode, useful for debugging.
+.TP
+.B \--restart
+Causes the running power manager to restart.
+.TP
+.B \--customize
+Shows the configuration dialog.
+.TP
+.B \--quit
+Causes any running \fBxfce4-power-manager\fP to exit.
+
+.SH BUGS
+Please report any bugs to
+.IR http://bugzilla.xfce.org/ .
+Development discussion should be conducted on the
+.IR goodies-dev@xfce.org
+mailing list.  Usage-related questions should be directed to the
+.IR xfce@xfce.org
+mailing list.
+
+.SH HOMEPAGE
+.I http://goodies.xfce.org/
+
+.SH AUTHOR
+Ali Abdallah <aliov@xfce.org>.
+
+This manual page was originally written by Ali Abdallah
+.br
+<aliov@xfce.org>.
