@@ -1,4 +1,10 @@
 
+2009-04-01  9:33 Ali aliov@xfce.org 
+	 * : Added man pages for the power manager and its settings
+
+2009-04-01  9:33 Ali aliov@xfce.org 
+	 * : 
+
 2009-03-31  8:48 Ali aliov@xfce.org 
 	 * : Bug:Brightness control wasn't getting disabled even if the user disabled it+fix dpms settings changed signal
 
